--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ PySocks==1.7.0
 requests==2.22.0
 requests-oauthlib==1.2.0
 six==1.12.0
--U git+https://github.com/tweepy/tweepy.git@2efe385fc69385b57733f747ee62e6be12a1338b
+gunicorn
+git+https://github.com/tweepy/tweepy.git@2efe385fc69385b57733f747ee62e6be12a1338b
 urllib3==1.25.3
